--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 .jumbotron {
     background-color: #ede8f5;
     padding-top: 2rem;
+    width: 200px;
 }
 #projects {
   background-color: #ede8f5;
